Closed Bug 1018533 Opened 11 years ago Closed 11 years ago

--thread-count=N asserts on startup

Categories

(Core :: JavaScript Engine, defect)

x86_64
macOS
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla32

People

(Reporter: jruderman, Assigned: shu)

References

Details

(Keywords: assertion, regression)

Attachments

(2 files)

Attached file stack
If I run a thread-safe JS shell with "--thread-count=1" or "--thread-count=2", I get: Assertion failure: !WorkerThreadState().threads, at js/src/jsworkers.cpp:58 The first bad revision is: changeset: https://hg.mozilla.org/mozilla-central/rev/93dce4b831f3 user: Brian Hackett date: Tue May 27 09:58:33 2014 -0700 summary: Bug 966646 - Use JS helper threads for GC background sweeping / allocation, r=billm.
Assignee: nobody → shu
Status: NEW → ASSIGNED
Attachment #8432917 - Flags: review?(bhackett1024)
Attachment #8432917 - Flags: review?(bhackett1024) → review+
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: