Bug 1018533 - Fix js shell's --thread-count assertion. (r=bhackett)